# internal/product/handler.go
@@ -1,18 +1,41 @@
 package product
 
 import (
+	"github.com/Picus-Security-Golang-Bootcamp/bitirme-projesi-Hcankaynak/internal/api"
+	httpErr "github.com/Picus-Security-Golang-Bootcamp/bitirme-projesi-Hcankaynak/internal/httpErrors"
+	"github.com/Picus-Security-Golang-Bootcamp/bitirme-projesi-Hcankaynak/pkg/config"
+	"github.com/Picus-Security-Golang-Bootcamp/bitirme-projesi-Hcankaynak/pkg/middleware"
 	"github.com/gin-gonic/gin"
-	"go.uber.org/zap"
+	"net/http"
 )
 
 type productHandler struct {
 	repo *ProductRepository
+	cfg  *config.JWTConfig
 }
 
-func NewProductHandler(r *gin.RouterGroup, repo *ProductRepository) {
-	zap.L().Debug("Product Handler initializing..")
+func NewProductHandler(r *gin.RouterGroup, repo *ProductRepository, cfg *config.JWTConfig) {
+	h := &productHandler{repo: repo, cfg: cfg}
+	h.repo.Migration()
 
-	//h := &productHandler{repo: repo}
+	r.Use(middleware.AuthMiddleware(cfg.SecretKey))
+	r.POST("/", h.createProduct)
 
-	zap.L().Debug("User Handler initialized")
+}
+
+func (p *productHandler) createProduct(c *gin.Context) {
+	// TODO: swagger product item.
+	var req api.Product
+	if err := c.Bind(&req); err != nil {
+		c.JSON(httpErr.ErrorResponse(httpErr.NewRestError(http.StatusBadRequest, "check your request body", nil)))
+		return
+	}
+
+	prod, err := p.repo.createProduct(*ResponseToProduct(&req))
+	if err != nil {
+		c.JSON(httpErr.ErrorResponse(httpErr.NewRestError(http.StatusInternalServerError, "product couldn't added", err)))
+		return
+	}
+
+	c.JSON(http.StatusOK, prod)
 }
